--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/screepers/screeps-typescript-starter#readme",
   "devDependencies": {
     "@types/lodash": "^3.10.1",
-    "@types/screeps": "^2.3.0",
+    "@types/screeps": "^2.4.0",
     "rollup": "^0.57.1",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-commonjs": "^9.1.0",
@@ -38,6 +38,8 @@
     "typescript": "^2.8.3"
   },
   "dependencies": {
+    "@types/q": "^1.5.0",
+    "q": "^1.5.1",
     "source-map": "~0.6.1"
   }
 }
